# run-web-binary

./: cli.py  pyproject.toml
src/run_web_binary/: cli.py
