[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "run-web-binary"
version = "0.1.0"
description = "Run binary executables from GitHub releases - perfect for non-Python/JS MCP servers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Dan Lewis" }
]
keywords = ["mcp", "binary", "github", "releases", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
run-web-binary = "run_web_binary.cli:main"

[project.urls]
Homepage = "https://github.com/danroblewis/run-web-binary"
Repository = "https://github.com/danroblewis/run-web-binary"

